--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Dokumentacia.docx
 pcap
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm,jetbrains
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm,jetbrains
